--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "quran-academy-dialer",
-  "version": "2.0.0",
-  "description": "Quran Academy Professional Calling System with Real-Time WebSocket",
+  "version": "3.0.0",
+  "description": "Quran Academy Professional Calling System with MongoDB Database",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "mongoose": "^8.0.0",
     "twilio": "^4.19.0",
     "ws": "^8.14.2"
   }
